Fix background image truncation on mobile.
Bug: b/457338199

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -20,7 +20,8 @@ html,
 body,
 #root,
 .tim-home-page {
-  height: 100%;
+  height: fit-content;
+  min-height: 100dvh;
 }
 
 .tim-home-page {
